[package]
authors = ["jam"]
name = "game-client"
version = "0.1.0"

[dependencies]
find_folder = "0.3.0"
piston-ai_behavior = "0.20.0"
piston2d-sprite = "0.36.0"
piston_window = "0.66.0"
fps_counter = "0.2.0"
pistoncore-sdl2_window = "0.43.0"
piston-music = { git= "https://github.com/jamartin9/music.git" }

[dependencies.clap]
default-features = false
features = ["suggestions", "color", "wrap_help", "yaml"]
version = "2.24.2"